[gd_scene load_steps=24 format=3 uid="uid://cms4qukafcm8u"]

[ext_resource type="Script" path="res://class/Rapier.gd" id="1_whxn6"]
[ext_resource type="Resource" uid="uid://4xi28410gcns" path="res://weapon resources/Rapier.tres" id="2_5obyc"]
[ext_resource type="Texture2D" uid="uid://b0fvadsfiihgk" path="res://PNG/Assets/Rapier.png" id="3_jthfj"]
[ext_resource type="AudioStream" uid="uid://bv0fd6g5rf8yi" path="res://Audio/rapier_sound.mp3" id="4_eear6"]
[ext_resource type="Texture2D" uid="uid://dq2pw7m7cstvd" path="res://PNG/Assets/sweep_sheet.png" id="5_p7ok7"]

[sub_resource type="PrismMesh" id="PrismMesh_f0gr5"]
size = Vector3(5, 100, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ywx4e"]
radius = 21.2298
height = 308.26

[sub_resource type="Animation" id="Animation_7xoi3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(132, 103)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785397]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RP_hitbox/RP_hitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Effect:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.283, 0.283)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Effect:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(44.23, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Effect:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.57079]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Effect:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e3al6"]
resource_name = "RP active"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 142), Vector2(0, 142), Vector2(132, 103)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.45),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, -0.785397]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RP_hitbox/RP_hitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ha6vd"]
resource_name = "RP attack"
length = 0.85
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.25, 0.45, 0.5, 0.7, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 0.203, 1, 0.203, 1, 0.203, 9.18, 1, 1),
"update": 0,
"values": [Vector2(132, 103), Vector2(136, -19), Vector2(57, -72), Vector2(20, -246), Vector2(-57, -72), Vector2(-20, -246), Vector2(57, -72), Vector2(20, -246), Vector2(136, -19), Vector2(132, 103)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.25, 0.45, 0.5, 0.7, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.785397, -1.8326, -1.8675, -1.66155, -1.27933, -1.44862, -1.8675, -1.66155, -1.8326, -0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.4, 0.65),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0],
"method": &"emit_chain_attack"
}, {
"args": [1],
"method": &"emit_chain_attack"
}]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2, 0.475, 0.725),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"emit_push_attack"
}, {
"args": [],
"method": &"emit_push_attack"
}, {
"args": [],
"method": &"emit_push_attack"
}]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.175, 0.475, 0.725),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"play_weappon_sound"
}, {
"args": [],
"method": &"play_weappon_sound"
}, {
"args": [],
"method": &"play_weappon_sound"
}]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.175, 0.425, 0.675),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"play_effect_poke"
}, {
"args": [],
"method": &"play_effect_poke"
}, {
"args": [],
"method": &"play_effect_poke"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".:isAttacking")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.25, 0.45, 0.5, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("RP_hitbox/RP_hitbox:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25, 0.45, 0.5, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Effect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.2, 0.425, 0.45, 0.65, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Effect:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.283, 0.283)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Effect:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.175, 0.2, 0.225, 0.25, 0.325, 0.4, 0.425, 0.45, 0.475, 0.575, 0.65, 0.675, 0.7, 0.725, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1e-05, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-20.5063, -166.17), Vector2(-34.5325, -90.2753), Vector2(53.297, -44.3557), Vector2(52.8778, -11.2474), Vector2(45.6315, -15.93), Vector2(109.565, 3.12114), Vector2(178.51, 3.0596), Vector2(48.5507, 36.7462), Vector2(51.8185, 43.9638), Vector2(52.0418, 10.7595), Vector2(107.494, -5.12694), Vector2(175.552, -4.33311), Vector2(48.5748, -36.7144), Vector2(55.8732, -42.5223), Vector2(57.7842, -10.2848), Vector2(53.5986, -15.205), Vector2(53.5986, -15.205)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("Effect:rotation")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 0.175, 0.2, 0.225, 0.25, 0.325, 0.4, 0.425, 0.45, 0.475, 0.575, 0.65, 0.675, 0.7, 0.725, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [-0.785397, 0.291745, 0.307834, 0.196572, 0.0908844, -0.0537495, -0.195983, -0.243394, -0.294933, -0.203324, 0.0345911, 0.19098, 0.241734, 0.296194, 0.194116, 0.0940265, 0.0940265]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Effect:modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0, 0.325, 0.425, 0.45, 0.525, 0.65, 0.675, 0.75, 0.85),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 7.72749, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_k843s"]
resource_name = "RP deactive"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(132, 103)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785397]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RP_hitbox/RP_hitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_uxeqg"]
resource_name = "RP recover"
length = 0.1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(132, 103)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.785397]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RP_hitbox/RP_hitbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Effect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7o5b3"]
_data = {
"RESET": SubResource("Animation_7xoi3"),
"RP active": SubResource("Animation_e3al6"),
"RP attack": SubResource("Animation_ha6vd"),
"RP deactive": SubResource("Animation_k843s"),
"RP recover": SubResource("Animation_uxeqg")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_nyvnf"]
atlas = ExtResource("5_p7ok7")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mid1c"]
atlas = ExtResource("5_p7ok7")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1awaf"]
atlas = ExtResource("5_p7ok7")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k368"]
atlas = ExtResource("5_p7ok7")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_koskl"]
atlas = ExtResource("5_p7ok7")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwjpf"]
atlas = ExtResource("5_p7ok7")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_02udo"]
atlas = ExtResource("5_p7ok7")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0qqt"]
atlas = ExtResource("5_p7ok7")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb8wi"]
atlas = ExtResource("5_p7ok7")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7nybi"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyvnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mid1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1awaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k368")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"new_animation",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_koskl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwjpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwjpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02udo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0qqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb8wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb8wi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sb8wi")
}],
"loop": false,
"name": &"poke",
"speed": 30.0
}]

[node name="Rapier" type="Node2D" node_paths=PackedStringArray("animation_player")]
modulate = Color(1, 1, 1, 0)
position = Vector2(132, 103)
rotation = -0.785397
script = ExtResource("1_whxn6")
isAttacking = true
weapon_resource = ExtResource("2_5obyc")
animation_player = NodePath("AnimationPlayer")

[node name="RP_Mesh" type="MeshInstance2D" parent="."]
modulate = Color(0.756863, 0.756863, 0, 1)
self_modulate = Color(1, 1, 1, 0)
rotation = -1.57079
scale = Vector2(2.32, 3.96)
mesh = SubResource("PrismMesh_f0gr5")

[node name="Sprite2D" type="Sprite2D" parent="RP_Mesh"]
position = Vector2(-0.813351, -2.88375)
rotation = 3.66519
scale = Vector2(0.0499741, 0.0524024)
skew = 0.431096
texture = ExtResource("3_jthfj")

[node name="RP_hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 12

[node name="RP_hitbox" type="CollisionShape2D" parent="RP_hitbox"]
position = Vector2(43.5065, -0.00942278)
rotation = -1.56225
shape = SubResource("CapsuleShape2D_ywx4e")
disabled = true
debug_color = Color(0.968627, 0.141176, 0.0117647, 0.611765)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7o5b3")
}
blend_times = [&"RP attack", &"RP recover", 0.025]

[node name="WallCheckRay" type="RayCast2D" parent="."]
modulate = Color(1, 0, 0, 1)
top_level = true
visibility_layer = 4
collision_mask = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_eear6")
volume_db = 9.39

[node name="Effect" type="Node2D" parent="."]
position = Vector2(44.23, 0)
rotation = -1.57079
scale = Vector2(0.283, 0.283)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Effect"]
position = Vector2(355.013, -0.223625)
scale = Vector2(21.765, 21.765)
sprite_frames = SubResource("SpriteFrames_7nybi")
animation = &"poke"

[connection signal="area_entered" from="RP_hitbox" to="." method="_on_rp_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
